# openvm-zorch

./: .gitignore  CLAUDE.md  MODULE.bazel  README.md  requirements.in  requirements_lock_3_11.txt
.github/workflows/: ci.yml  frx-update.yml  jax-update.yml
docs/: README.md  architecture.md  byte-match.md  conventions.md  development.md  native-baseline.md  swirl-pipeline.md
openvm_zorch/: BUILD.bazel  __init__.py  _sumcheck_scan.py  bench_common.py  bench_common_test.py  fields.py  poly_common.py  prove.py  prove_bench.py  prove_test.py  transcript.py  transcript_test.py  verify.py  verify_prove.py  verify_test.py
openvm_zorch/bench_gkr_boundary/: BUILD.bazel  bench_logup_gkr_phases.py
openvm_zorch/commit/: BUILD.bazel  rs_message.py  stacked_merkle.py  stacking.py  stacking_test.py  trace_commit.py  trace_commit_test.py
openvm_zorch/commit/testdata/stacked_commit/: meta.json
openvm_zorch/commit/testdata/stacked_commit/inputs/: trace_0.npy  trace_1.npy  trace_2.npy
openvm_zorch/commit/testdata/stacked_commit/outputs/: codeword.npy  compress_pair.npy  digest_layer_0.npy  digest_layer_1.npy  digest_layer_2.npy  digest_layer_3.npy  digest_layer_4.npy  perm_0_15.npy  root.npy  sponge_0_31.npy  stacked_matrix.npy
openvm_zorch/logup_gkr/: BUILD.bazel  __init__.py  bench_logup_gkr_phases.py  input_layer.py  logup_gkr_test.py  prover.py  prover_test.py  verifier.py
openvm_zorch/logup_gkr/testdata/logup_gkr/: meta.json
openvm_zorch/logup_gkr/testdata/logup_gkr/inputs/: trace_3.npy
openvm_zorch/logup_gkr/testdata/logup_gkr/outputs/: alpha.npy  beta.npy  claims_per_layer.npy  gkr_input_evals.npy  q0_claim.npy  sumcheck_polys_layer_0.npy  sumcheck_polys_layer_1.npy  sumcheck_polys_layer_2.npy  sumcheck_polys_layer_3.npy  transcript_perm_results.npy  xi.npy
openvm_zorch/logup_zerocheck/: BUILD.bazel  _round_composite.py  constraints.py  conv_test.py  prism.py  prover.py  prover_test.py  verifier.py  zerocheck_test.py
openvm_zorch/logup_zerocheck/testdata/zerocheck/: meta.json
openvm_zorch/logup_zerocheck/testdata/zerocheck/inputs/: constraints_3.json  constraints_4.json  trace_0.npy  trace_1.npy  trace_2.npy
openvm_zorch/logup_zerocheck/testdata/zerocheck/outputs/: beta.npy  column_openings_t0_p0.npy  column_openings_t1_p0.npy  column_openings_t2_p0.npy  column_openings_t3_p0.npy  column_openings_t4_p0.npy  lambda.npy  mu.npy  round_polys.npy  s0_coeffs.npy  sum_claims.npy  transcript_values.npy
openvm_zorch/poseidon2/: BUILD.bazel  babybear16.py  babybear16_test.py
openvm_zorch/stacked_reduction/: BUILD.bazel  prover.py  prover_test.py  stacked_reduction_test.py  verifier.py
openvm_zorch/stacked_reduction/testdata/stacking/: meta.json
openvm_zorch/stacked_reduction/testdata/stacking/inputs/: r.npy
openvm_zorch/stacked_reduction/testdata/stacking/outputs/: lambda.npy  round_polys.npy  s0_coeffs.npy  stacked_matrix.npy  stacking_openings_c0.npy  transcript_perm_results.npy  u.npy
openvm_zorch/testdata/baseline/: native_micro_cpu.json  native_prod_cpu.json  native_prod_gpu.json  native_realfib_cpu.json  native_realfib_gpu.json
openvm_zorch/testdata/prove/: meta.json
openvm_zorch/testdata/prove/inputs/: constraints_0.json  constraints_1.json  constraints_2.json
openvm_zorch/testdata/prove/outputs/: common_main_commit.npy  logup_pow_witness.npy  q0_claim.npy  st_lambda.npy  st_openings_c0.npy  st_u.npy  whir_codeword_commits.npy  whir_final_poly.npy  whir_folding_pow_witnesses.npy  whir_mu.npy  whir_mu_pow_witness.npy  whir_ood_values.npy  whir_query_phase_pow_witnesses.npy  whir_sumcheck_polys.npy  xi.npy  zc_lambda.npy  zc_r.npy  zc_s0_coeffs.npy
openvm_zorch/testdata/transcript/: meta.json  transcript_is_sample.npy  transcript_perm_results.npy  transcript_values.npy
openvm_zorch/whir/: BUILD.bazel  bench_whir_phases.py  prover.py  prover_test.py  scheme.py  verifier.py  whir_test.py
openvm_zorch/whir/testdata/whir/: meta.json
openvm_zorch/whir/testdata/whir/inputs/: u_cube.npy
openvm_zorch/whir/testdata/whir/outputs/: codeword_commits.npy  codeword_merkle_proofs_r1.npy  codeword_merkle_proofs_r2.npy  codeword_opened_values_r1.npy  codeword_opened_values_r2.npy  final_poly.npy  folding_pow_witnesses.npy  initial_merkle_proofs_c0.npy  initial_opened_rows_c0.npy  mu.npy  mu_pow_witness.npy  ood_values.npy  query_phase_pow_witnesses.npy  sumcheck_polys.npy  transcript_is_sample.npy
tools/fixture-gen/: Cargo.toml  README.md
tools/fixture-gen/src/: main.rs
tools/real-block-gen/: README.md  dump_fixture.rs
