"""openvm-zorch — a lean OpenVM (SWIRL) prover built on zorch's scheme-agnostic blocks.

bzlmod module. bazel 9 dropped WORKSPACE, so dependencies and the hermetic
Python toolchain are declared here.

openvm-zorch consumes fractalyze/zorch (hashing + Merkle commitment + the rest
of the SNARK spine) and adds ONLY the SWIRL/OpenVM-specific glue: the stacked
PCS layout, the query-strided Merkle structure, the prismalinear RS message,
and the byte-match against the openvm-stark-backend reference prover. Nothing
SWIRL-specific belongs in zorch — it lives here.
"""

module(
    name = "openvm_zorch",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")

# zorch is not published on a Bazel registry; pin it from GitHub so CI builds
# are reproducible. For local dev against a working copy, add to .bazelrc.user
# (gitignored):
#   common --override_module=zorch=/abs/path/to/your/zorch/checkout
bazel_dep(name = "zorch", version = "0.0.0")
git_override(
    module_name = "zorch",
    # main @ #443 — advanced in lockstep with the jax 0.0.5 -> 0.10.0 wheel
    # migration. The zkx-marker contract requires it: an old-jax zorch emits
    # composite markers a new-jax wheel rejects, so the pin and the wheel set
    # move together. Relative to the prior #284 pin this crosses the #329
    # merkle/hash API modernization and #283's JAX-native jagged PCS +
    # `sumcheck.prover` -> `transcript` state-leaf move; the SWIRL surface this
    # consumer drives is retained (multi-commitment WHIR open, truncated
    # round-poly domain + extension-field fold challenge, eval_coeffs via
    # lax.scan). sp1-zorch validated this exact commit on jax
    # 0.10.0.dev20260709073514.
    commit = "3c0a0208a69a573584d3b1004f118a8620f60bf6",
    remote = "https://github.com/fractalyze/zorch.git",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    # jax / jaxlib / jax-cuda12-pjrt are published on the Fractalyze index.
    extra_pip_args = ["--extra-index-url=https://fractalyze.github.io/pypi/simple/"],
    hub_name = "openvm_zorch_pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock_3_11.txt",
)
use_repo(pip, "openvm_zorch_pip")
