load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@openvm_zorch_pip//:requirements.bzl", "requirement")

# Transcript-only golden vectors from tools/fixture-gen (--transcript-out).
filegroup(
    name = "transcript_testdata",
    srcs = glob(["testdata/transcript/**"]),
    visibility = ["//openvm_zorch:__subpackages__"],
)

# BabyBear / BabyBear⁴ dtype helpers shared across stages.
py_library(
    name = "fields",
    srcs = [
        "__init__.py",
        "fields.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

# OpenVM's Fiat-Shamir transcript: zorch DuplexTranscript + BabyBear⁴ glue.
py_library(
    name = "transcript",
    srcs = [
        "__init__.py",
        "transcript.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//openvm_zorch/poseidon2:babybear16",
        "@zorch//zorch:transcript",
        "@zorch//zorch/hash/poseidon2",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "transcript_test",
    size = "medium",
    srcs = ["transcript_test.py"],
    data = [":transcript_testdata"],
    deps = [
        ":transcript",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# End-to-end SWIRL prover: the five stage modules composed into one prove().
py_library(
    name = "prove",
    srcs = [
        "__init__.py",
        "prove.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":transcript",
        "//openvm_zorch/commit:trace_commit",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_gkr:prover",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/logup_zerocheck:prover",
        "//openvm_zorch/stacked_reduction:prover",
        "//openvm_zorch/whir:prover",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/utils:bits",
        "@zorch//zorch:transcript",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "prove_test",
    size = "enormous",
    srcs = ["prove_test.py"],
    data = [
        "//openvm_zorch/logup_gkr:testdata",
        "//openvm_zorch/logup_zerocheck:testdata",
        "//openvm_zorch/stacked_reduction:testdata",
        "//openvm_zorch/whir:testdata",
    ],
    deps = [
        ":prove",
        ":transcript",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/poseidon2:babybear16",
        "//openvm_zorch/whir:prover",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)
