load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@openvm_zorch_pip//:requirements.bzl", "requirement")

# Transcript-only golden vectors from tools/fixture-gen (--transcript-out).
filegroup(
    name = "transcript_testdata",
    srcs = glob(["testdata/transcript/**"]),
    visibility = ["//openvm_zorch:__subpackages__"],
)

# Self-contained production-params end-to-end fixture (--prove-out).
filegroup(
    name = "prove_testdata",
    srcs = glob(["testdata/prove/**"]),
    visibility = ["//openvm_zorch:__subpackages__"],
)

# BabyBear / BabyBear⁴ dtype helpers shared across stages.
py_library(
    name = "fields",
    srcs = [
        "__init__.py",
        "fields.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

# OpenVM's Fiat-Shamir transcript: zorch DuplexTranscript + BabyBear⁴ glue.
py_library(
    name = "transcript",
    srcs = [
        "__init__.py",
        "transcript.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//openvm_zorch/poseidon2:babybear16",
        "@zorch//zorch:transcript",
        "@zorch//zorch/hash/poseidon2",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "transcript_test",
    size = "medium",
    srcs = ["transcript_test.py"],
    data = [":transcript_testdata"],
    deps = [
        ":transcript",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# End-to-end SWIRL prover: the five stage modules composed into one prove().
py_library(
    name = "prove",
    srcs = [
        "__init__.py",
        "prove.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":transcript",
        "//openvm_zorch/commit:trace_commit",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_gkr:prover",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/logup_zerocheck:prover",
        "//openvm_zorch/stacked_reduction:prover",
        "//openvm_zorch/whir:prover",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/utils:bits",
        "@zorch//zorch:transcript",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "prove_test",
    size = "enormous",
    srcs = ["prove_test.py"],
    data = [
        ":prove_testdata",
        "//openvm_zorch/logup_gkr:testdata",
        "//openvm_zorch/logup_zerocheck:testdata",
        "//openvm_zorch/stacked_reduction:testdata",
        "//openvm_zorch/whir:testdata",
    ],
    deps = [
        ":prove",
        ":transcript",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/poseidon2:babybear16",
        "//openvm_zorch/whir:prover",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# End-to-end SWIRL verifier: re-derives challenges, checks each stage.
py_library(
    name = "verify",
    srcs = [
        "__init__.py",
        "verify.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":fields",
        ":prove",
        ":transcript",
        "//openvm_zorch/commit:stacking",
        "//openvm_zorch/logup_gkr:prover",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/logup_zerocheck:prism",
        "//openvm_zorch/logup_zerocheck:prover",
        "//openvm_zorch/stacked_reduction:prover",
        "//openvm_zorch/whir:prover",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/utils:bits",
        "@zorch//zorch:transcript",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "verify_test",
    size = "enormous",
    srcs = ["verify_test.py"],
    data = [":prove_testdata"],
    deps = [
        ":prove",
        ":transcript",
        ":verify",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/poseidon2:babybear16",
        "//openvm_zorch/whir:prover",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# Wall-clock baseline (cold vs warm) for the full prover on the production
# fixture. A GPU-only manual tool (deps the cuda plugin, which jax loads at
# import — so it requires libcuda; it is NOT a CI test). Run on a GPU box:
#   CPU: bazel run //openvm_zorch:prove_bench -- --runs 4
#   GPU: JAX_PLATFORMS=cuda CUDA_VISIBLE_DEVICES=1 \
#        bazel run //openvm_zorch:prove_bench -- --runs 4
py_binary(
    name = "prove_bench",
    srcs = ["prove_bench.py"],
    data = [
        ":prove_testdata",
        "//openvm_zorch/logup_gkr:testdata",
        "//openvm_zorch/logup_zerocheck:testdata",
        "//openvm_zorch/stacked_reduction:testdata",
        "//openvm_zorch/whir:testdata",
    ],
    deps = [
        ":prove",
        ":transcript",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/poseidon2:babybear16",
        "//openvm_zorch/whir:prover",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("absl_py"),
        requirement("jax"),
        requirement("jax_cuda12_plugin"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("zkx_cuda_pjrt"),
    ],
)
