load("@openvm_zorch_pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

# Transcript-only golden vectors from tools/fixture-gen (--transcript-out).
filegroup(
    name = "transcript_testdata",
    srcs = glob(["testdata/transcript/**"]),
    visibility = ["//openvm_zorch:__subpackages__"],
)

# Self-contained production-params end-to-end fixture (--prove-out).
filegroup(
    name = "prove_testdata",
    srcs = glob(["testdata/prove/**"]),
    visibility = ["//openvm_zorch:__subpackages__"],
)

# Native-prover baseline JSONs (--baseline-out); see docs/development.md.
filegroup(
    name = "baseline_testdata",
    srcs = glob(["testdata/baseline/**"]),
    visibility = ["//openvm_zorch:__subpackages__"],
)

# BabyBear / BabyBear⁴ dtype helpers shared across stages.
py_library(
    name = "fields",
    srcs = [
        "__init__.py",
        "fields.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("frx"),
        requirement("zk_dtypes"),
    ],
)

# Verifier-side scalar algebra shared by the per-stage duals (poly_common.rs).
py_library(
    name = "bench_common",
    srcs = [
        "__init__.py",
        "bench_common.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//openvm_zorch/commit:stacking",
        "//openvm_zorch/logup_zerocheck:constraints",
        requirement("frx"),
    ],
)

py_test(
    name = "bench_common_test",
    srcs = ["bench_common_test.py"],
    deps = [
        ":bench_common",
        "//openvm_zorch/commit:stacking",
        "//openvm_zorch/logup_zerocheck:constraints",
        requirement("absl_py"),
        requirement("frx"),
        requirement("zk_dtypes"),
    ],
)

py_library(
    name = "poly_common",
    srcs = [
        "__init__.py",
        "poly_common.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":fields",
        requirement("frx"),
    ],
)

# OpenVM's Fiat-Shamir transcript: zorch DuplexTranscript + BabyBear⁴ glue.
py_library(
    name = "transcript",
    srcs = [
        "__init__.py",
        "transcript.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//openvm_zorch/poseidon2:babybear16",
        "@zorch//zorch:transcript",
        "@zorch//zorch/hash/poseidon2",
        requirement("frx"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "transcript_test",
    size = "medium",
    srcs = ["transcript_test.py"],
    data = [":transcript_testdata"],
    deps = [
        ":transcript",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# End-to-end SWIRL prover: the five stage modules composed into one prove().
py_library(
    name = "prove",
    srcs = [
        "__init__.py",
        "prove.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":transcript",
        "//openvm_zorch/commit:trace_commit",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_gkr:prover",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/logup_zerocheck:prover",
        "//openvm_zorch/stacked_reduction:prover",
        "//openvm_zorch/whir:prover",
        "@zorch//zorch:round",
        "@zorch//zorch:transcript",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/utils:bits",
        requirement("frx"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "prove_test",
    size = "enormous",
    srcs = ["prove_test.py"],
    data = [
        ":prove_testdata",
        "//openvm_zorch/logup_gkr:testdata",
        "//openvm_zorch/logup_zerocheck:testdata",
        "//openvm_zorch/stacked_reduction:testdata",
        "//openvm_zorch/whir:testdata",
    ],
    deps = [
        ":prove",
        ":transcript",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/poseidon2:babybear16",
        "//openvm_zorch/whir:prover",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# End-to-end SWIRL verifier: the chain of per-stage verifier duals.
py_library(
    name = "verify",
    srcs = [
        "__init__.py",
        "verify.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":fields",
        ":poly_common",
        ":prove",
        "//openvm_zorch/commit:stacking",
        "//openvm_zorch/logup_gkr:verifier",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/logup_zerocheck:prover",
        "//openvm_zorch/logup_zerocheck:verifier",
        "//openvm_zorch/stacked_reduction:prover",
        "//openvm_zorch/stacked_reduction:verifier",
        "//openvm_zorch/whir:prover",
        "//openvm_zorch/whir:verifier",
        "@zorch//zorch:round",
        "@zorch//zorch:transcript",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        requirement("frx"),
    ],
)

py_test(
    name = "verify_test",
    size = "enormous",
    srcs = ["verify_test.py"],
    data = [":prove_testdata"],
    deps = [
        ":prove",
        ":transcript",
        ":verify",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/poseidon2:babybear16",
        "//openvm_zorch/whir:prover",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# Byte-match harness + per-stage wall-clock for the full prover on a
# production fixture (the openvm sibling of sp1-zorch's verify_prove_shard).
# A GPU-capable manual tool (deps the cuda plugin, which frx loads at import —
# so it requires libcuda; it is NOT a CI test) — the way to gate GPU
# byte-match at scale, where the backend-agnostic prove_test cannot run. Run:
#   CPU: bazel run //openvm_zorch:verify_prove
#   GPU: FRX_PLATFORMS=cuda CUDA_VISIBLE_DEVICES=1 XLA_PYTHON_CLIENT_PREALLOCATE=false \
#        bazel run //openvm_zorch:verify_prove -- --fixture_dir /path/to/fixture
py_binary(
    name = "verify_prove",
    srcs = ["verify_prove.py"],
    data = [
        ":baseline_testdata",
        ":prove_testdata",
        "//openvm_zorch/logup_gkr:testdata",
        "//openvm_zorch/logup_zerocheck:testdata",
        "//openvm_zorch/stacked_reduction:testdata",
        "//openvm_zorch/whir:testdata",
    ],
    deps = [
        ":bench_common",
        ":prove",
        ":transcript",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/poseidon2:babybear16",
        "//openvm_zorch/whir:prover",
        "@zorch//zorch:round",
        requirement("absl_py"),
        requirement("frx"),
        requirement("frx_cuda12_plugin"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("frx_cuda12_pjrt"),
    ],
)
