load("@openvm_zorch_pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

# Local-only zkbench harness (NOT a test): LogUp-GKR per-phase warm runtime on a
# prove fixture, mirroring sp1-zorch's bench_logup_gkr_phases. Issue #44.
py_binary(
    name = "bench_logup_gkr_phases",
    srcs = ["bench_logup_gkr_phases.py"],
    deps = [
        "//openvm_zorch:prove",
        "//openvm_zorch:transcript",
        "//openvm_zorch/logup_gkr:input_layer",
        "//openvm_zorch/logup_gkr:prover",
        "//openvm_zorch/logup_zerocheck:constraints",
        "//openvm_zorch/poseidon2:babybear16",
        "//openvm_zorch/whir:prover",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("zkbench"),
    ],
)
